--- a/hello_world.html
+++ b/hello_world.html
@@ -1,3 +1,23 @@
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+<title>hello_world</title>
+    <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+ })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-45247350-1', 'mindfulstart.me');
+ga('send', 'pageview');
+
+    </script>
+</head>
+<body>
 <h1>Hello World</h1>
 
 <h2>以后要坚持在这里写博客了，加油！</h2>
+	
+</body>
+</html>
